--- a/src/FoodOrdering/FoodOrderSAO.form
+++ b/src/FoodOrdering/FoodOrderSAO.form
@@ -228,7 +228,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="8c148" class="javax.swing.JButton" binding="orderButton" default-binding="true">
+          <component id="8c148" class="javax.swing.JButton" binding="btnOrder">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
